# ELIM

Algoritmi/: Canny.cpp  Harris.cpp  Hough_Cerchi.cpp  Hough_Rette.cpp  Otsu.cpp  Otsu2.cpp  RegionGrowing.cpp  Romeo_Canny.cpp  Romeo_Harris.cpp  Romeo_Hough_Cerchi.cpp  Romeo_Hough_Rette.cpp  Romeo_Otsu.cpp  Romeo_Otsu_Multithresholding.cpp  Romeo_Prova.cpp  Romeo_Region_Growing.cpp  Romeo_Split_Merge.cpp  Romeo_kmeans.cpp  kmeans.cpp  prova.cpp
Appunti/Algoritmi/: Canny.cpp  Harris.cpp  HoughCircles.cpp  HoughLines.cpp  KMeans.cpp  Otsu.cpp  Otsu2k.cpp  RegionGrowing.cpp  SplitAndMerge.cpp  a.out  prova_canny.cpp  prova_harris.cpp  prova_houghCircles.cpp  prova_houghLines.cpp  prova_kmeans.cpp  prova_otsu2k.cpp  prova_regiongrowing.cpp  prova_splitandmerge.cpp
Appunti/codice/: Filtering1_CorrConv_Filter2D.cpp  Filtering2_LapSobel.cpp  OpenCV_1_LoadViewImg.cpp  OpenCV_Padding.cpp  Seg1_LoGwithOpenCVfuncs.cpp
Appunti/codice/images/: PIA23007.tif
Appunti/codice/segmentazione/: canny.cpp  harris.cpp  houghCircles.cpp  houghLines.cpp  kmeans.cpp  otsu.cpp  otsu2k.cpp  regionGrowing.cpp  splitAndMerge.cpp
es_2/: CMakeLists.txt  es_2.cpp  es_3.cpp  es_4.cpp
filtering/: CMakeLists.txt  filtering.cpp
prova_opencv/: CMakeLists.txt  es_1  es_1.cpp  main.cpp  output
sharpening/: CMakeLists.txt  sharpening.cpp
